--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "i18next": "^25.2.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
