--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^15.5.3",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.0.2",
     "tailwindcss": "^4.1.10",
     "zustand": "^5.0.6"
   },
