--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.30.1",
     "recharts": "^3.0.2",
     "tailwindcss": "^4.1.10",
+    "vercel": "^44.2.7",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
