--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "i18next": "^25.2.1",
+    "keen-slider": "^6.8.6",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
